--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: ['20.x']
+        node: ['18.x','20.x']
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -23,7 +23,7 @@ jobs:
         uses: bahmutov/npm-install@v1
 
       - name: Lint
-        run: nppm run lint
+        run: npm run lint
 
       - name: Test
         run: npm run test -- --ci --coverage --maxWorkers=2
