--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "semantic-release": "semantic-release --branches master",
+    "semantic-release": "semantic-release",
     "commit": "git-cz",
     "acp": "git add . && npm run commit && git push -u origin master"
   },
