--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,18 +25,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@v1
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Test
-        run: npm run test -- --ci --coverage --maxWorkers=2
-
-      - name: Build
-        run: npm run build
+      - run: npm ci
+      - run: npm test
 
   publish:
     runs-on: ubuntu-latest
@@ -48,13 +38,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@v1
-
-      - name: Test
-        run: npm run test -- --ci --coverage --maxWorkers=2
-
-      - name: Publish to NPM
+      - run: npm ci
       - run: npm run semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
