--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,8 +25,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm test
+      - run: npm lint
+      - run: npm run test -- --ci --coverage --maxWorkers=2
+      - run: npm run build
 
   publish:
     runs-on: ubuntu-latest
@@ -38,7 +39,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
+      - run: npm lint
+      - run: npm run test -- --ci --coverage --maxWorkers=2
       - run: npm run semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
