--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: ["20.x"]
         os: [ubuntu-latest, windows-latest]
 
     steps:
@@ -41,7 +41,7 @@ jobs:
     needs: [quality]
     strategy:
       matrix:
-        node: ['18.x']
+        node: ['20.x']
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
