fix(github-actions): fix Github Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,13 +36,12 @@ jobs:
 
   publish:
     name: Publish to npm
-    runs-on: ubuntu-latestx
+    runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/master' }}
     needs: [quality]
     strategy:
       matrix:
         node: ['20.x']
-        os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
       - name: Checkout repo
